<resources>
    <string name="Spanish">Spanish</string>
    <string name="app_name">SimpleFun</string>
    <string name="title">SIMPLE FUN</string>
    <string name="play_button_string">Play!</string>
    <string name="SFX_text">SFX</string>
    <string name="music_text">Music</string>
    <string name="daltonic_mode_text">Color Blindness</string>
    <string name="mute_text">Mute</string>
    <string name="vibration_text">Vibration</string>
    <string name="play">Play!</string>
    <string name="language_textview">Language</string>
    <string name="font_size_textview">Font Size</string>
    <string name="return_op_button">Return</string>
    <string name="hint_button_text">Hint</string>
    <string name="level">Level</string>
    <string name="return_button_highscore_text">Return</string>
    <string name="main_menu_button_text">Main Menu</string>
    <string name="play_again_button_text">Play Again</string>
    <string name="score_label">Score:</string>
    <string name="time_label">Time:</string>
    <string name="player_name_editText">Player1</string>
    <string name="close_text">Close</string>
    <string name="save_button_string">Save</string>
    <string name="Font_size_smallSize">Small Size</string>
    <string name="Font_size_mediumSize">Medium Size</string>
    <string name="Font_size_largeSize">Large Size</string>
    <string name="save_changes_button_text">Save Changes</string>
    <string name="changing_theme_toast">Changing Theme...</string>
    <string name="options_button_text">Options</string>
    <string name="normal_colors">Normal Mode</string>
    <string name="protanopia">Protanopia (Red/Green)</string>
    <string name="deuteranopia">Deuteranopia (Red/Green)</string>
    <string name="tritanopia">Tritanopia (Blue/Yellow)</string>
    <string name="changing_color_toast">Changing Color Mode...</string>
    <string name="usernameTextViewString">Username:</string>
    <string name="loginTextViewString">LOG IN</string>
    <string name="name_string">Name</string>
    <string name="password_textView_string">Password:</string>
    <string name="logInButton_string">Log In</string>
    <string name="time_textview_string">Time</string>
    <string name="name_textView_string">Name</string>
    <string name="level_textView_string">Level</string>
    <string name="generate_qr_button_string">Generate QR Code</string>
    <string name="read_qr_button_string">Read QR Code</string>
    <string name="need_to_log_in_string">You need to log in first...</string>
    <string name="secret_dialog_message">You have found a secret...Continue?</string>
    <string name="secret_dialog_title">Secret Fun</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="return_to_main_menu_message">Return to Main Menu?</string>
</resources>
