<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".mainpack.OptionsActivity"
    android:background="?backgroundTheme">

    <TextView
        style="?attr/textTitle"
        android:textColor="?attr/textTitleColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daltonic_mode_text"
        android:id="@+id/daltonic_textView"
        android:checked="false"
        android:layout_marginTop="33dp"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:gravity="left" />

    <CheckBox
        style="?checkBoxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mute_text"
        android:id="@+id/mute_checkBox"
        android:checked="false"
        android:layout_marginRight="43dp"
        android:layout_marginEnd="43dp"
        android:layout_alignTop="@+id/radioGroup_font"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        style="?checkBoxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibration_text"
        android:id="@+id/vibration_checkBox"
        android:checked="true"
        android:layout_below="@+id/mute_checkBox"
        android:layout_alignLeft="@+id/mute_checkBox"
        android:layout_alignStart="@+id/mute_checkBox" />

    <View
        style="?textBody"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/view3"
        android:layout_alignBottom="@+id/radioGroup_font"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <View
        style="?textBody"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/view4"
        android:layout_above="@+id/radioGroup_font"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <!--
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language_spinner"
        android:spinnerMode="dropdown"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />
-->
    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/language_textview"
        android:id="@+id/textView2"
        android:layout_below="@+id/vibration_checkBox"
        android:layout_alignLeft="@+id/vibration_checkBox"
        android:layout_alignStart="@+id/vibration_checkBox"
        android:layout_marginTop="24dp" />
-->

    <ImageButton
        style="?attr/buttonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_op_button"
        android:id="@+id/return_button"
        android:gravity="left|center"
        android:src="@android:drawable/ic_menu_revert"
        android:layout_marginBottom="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/daltonic_textView"
        android:layout_alignEnd="@+id/daltonic_textView"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup_font"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/return_button"
        android:layout_toStartOf="@+id/imageView3"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">

        <RadioButton
            style="?radioButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Font_size_smallSize"
            android:id="@+id/radioButton_smallfont"
            android:checked="false" />

        <RadioButton
            style="?radioButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Font_size_mediumSize"
            android:checked="true"
            android:id="@+id/radioButton_mediumfont" />

        <RadioButton
            style="?radioButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Font_size_largeSize"
            android:id="@+id/radioButton_largefont"
            android:checked="false" />

    </RadioGroup>

    <TextView
        style="?attr/textTitle"
        android:textColor="?textTitleColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_textview"
        android:id="@+id/font_size_label"
        android:textStyle="bold"
        android:layout_above="@+id/view4"
        android:layout_alignLeft="@+id/spinner_color_blindness"
        android:layout_alignStart="@+id/spinner_color_blindness" />

    <ImageButton
        style="?attr/buttonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes_button_text"
        android:id="@+id/button_change_font"
        android:src="@android:drawable/ic_menu_save"
        android:layout_below="@+id/radioGroup_font"
        android:layout_alignLeft="@+id/vibration_checkBox"
        android:layout_alignStart="@+id/vibration_checkBox" />

    <Spinner
        style="?textBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_color_blindness"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/daltonic_textView"
        android:layout_alignLeft="@+id/daltonic_textView"
        android:layout_alignStart="@+id/daltonic_textView"
        android:layout_alignRight="@+id/daltonic_textView"
        android:layout_alignEnd="@+id/daltonic_textView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@android:drawable/ic_lock_silent_mode"
        android:layout_below="@+id/view4"
        android:layout_above="@+id/vibration_checkBox"
        android:layout_toLeftOf="@+id/mute_checkBox"
        android:layout_marginRight="5sp" />

</RelativeLayout>
